--- a/style.css
+++ b/style.css
@@ -1,10 +1,49 @@
 /* base */
+
 body {
     max-width: 960px;
     margin: 0 auto;
     text-align: center;
     box-sizing: border-box;
 }
+
+.a {
+    background-color: red;
+}
+
+.b {
+    background-color: orange;
+}
+
+.c {
+    background-color: yellow;
+}
+
+.d {
+    background-color: green;
+}
+
+.e {
+    background-color: blue;
+}
+
+.f {
+    background-color: indigo;
+}
+
+.g {
+    background-color: violet;
+}
+
+.h {
+    background-color: hotpink;
+}
+
+.i {
+    background-color: chartreuse;
+}
+
+
 
 
 /* layout */
@@ -18,7 +57,7 @@ header {
 
 aside {
     float: left;
-    height: 600px;
+    height: 604px;
     width: 20%;
     border: 1px solid black;
 }
@@ -43,4 +82,100 @@ section.bottom {
     height: 150px;
     border: 1px solid black;
     float: right;
+}
+
+@media only screen and (max-width: 767px) {
+
+body {
+    max-width: 480px;
+    margin: 0 auto;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.a {
+background-color: khaki;
+}
+
+.b {
+background-color: rosybrown;
+}
+
+.c {
+background-color: greenyellow;
+}
+
+.d {
+background-color: aliceblue;
+}
+
+.e {
+background-color: violet;
+}
+
+.f {
+background-color: springgreen;
+}
+
+.g {
+background-color: silver;
+}
+
+.h {
+background-color: lightgoldenrodyellow;
+}
+
+.i {
+background-color: cornsilk;
+}
+
+header {
+    width: 99.7%;
+    height: 75px;
+    clear: both;
+    border: 1px solid black;
+}
+
+
+aside {
+    height: 150px;
+    width: 99.7%;
+    border: 1px solid black;
+}
+
+article {
+    display: inline-block;
+    width: 99.7%;
+    height: 125px;
+    border: 1px solid black;
+}
+
+section.quad {
+    /* display: inline-block; */
+    width: 49.17%;
+    height: 250px;
+    border: 1px solid black;
+}
+
+section.bottom {
+    width: 99.7%;
+    height: 80px;
+    border: 1px solid black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 }
